fix resources cards on mobile

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -622,7 +622,7 @@ footer .isDisabled:hover {
 .white {
   background-color: #ffffff;
   overflow: hidden;
-  max-height: 1800px;
+  max-height: 2500px;
   transition: max-height 1s ease;
 }
 
@@ -630,7 +630,9 @@ footer .isDisabled:hover {
   padding: 3em 1em;
   max-width: 1200px;
   margin: 0 auto;
+  overflow: hidden;
 }
+
 
 .resources {
   max-width: 100%;
@@ -687,7 +689,8 @@ ul li {
 }
 @media (max-width: 999px){
   .card {
-    margin: 1em;
+    margin: 1em 0.5em;
+    padding: 2em;
   }
 }
 
